crates/obj-rs/tests/derive_compile_fail/generic_struct.rs
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, obj::Document)]
struct Generic<T> {
    value: T,
}

fn main() {}
